src/test/ui/type/type-ascription-instead-of-initializer.stderr
error: expected type, found `10`
  --> $DIR/type-ascription-instead-of-initializer.rs:2:31
   |
LL |     let x: Vec::with_capacity(10, 20);
   |         --                    ^^ expected type
   |         ||
   |         |help: use `=` if you meant to assign
   |         while parsing the type for `x`

error[E0308]: arguments to this function are incorrect
  --> $DIR/type-ascription-instead-of-initializer.rs:2:12
   |
LL |     let x: Vec::with_capacity(10, 20);
   |            ^^^^^^^^^^^^^^^^^^^--^^^^^
   |                               |
   |                               argument of type usize unexpected
   |
help: remove the extra argument
   |
LL |     let x: (10);
   |            ^^^^

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0308`.
